<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_header1">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_1"
            android:title="@string/setting_use_gps_signal" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_1"
            android:title="@string/setting_use_net_signal" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/setting_signal_interval" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/setting_refresh_interval" />

    </PreferenceCategory>

</PreferenceScreen>