<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_pop_win">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/tv_shema_title"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/setting_schema"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tv_shema"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:inputType="textPersonName"
            android:text="@string/setting_schema_def"
            app:layout_constraintLeft_toRightOf="@id/tv_shema_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ip_title"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/setting_host"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_shema_title" />

        <EditText
            android:id="@+id/tv_ip"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:inputType="textPersonName"
            android:text="@string/setting_host_def"
            app:layout_constraintLeft_toRightOf="@id/tv_ip_title"
            app:layout_constraintTop_toBottomOf="@id/tv_shema" />

        <Button
            android:id="@+id/btn_server_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/setting_server_save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ip" />

        <Button
            android:id="@+id/btn_server_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/setting_server_cancel"
            app:layout_constraintLeft_toRightOf="@+id/btn_server_ok"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ip" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>